--- a/index.html
+++ b/index.html
@@ -6,12 +6,24 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/Grid.css">
 
-
+    <!-- handholding for developing the grid, DELETE if needed for Production -->
     <link rel="stylesheet" href="css/helper.css">
 </head>
 <body>
 
-<div class="container">
+<div class="container_Auto">
+    <div class="row">
+        <div class="columns one"></div>
+        <div class="columns two"></div>
+        <div class="columns three"></div>
+    </div>
+    <div class="row">
+        <div class="columns one">
+            <p>test test test test test test test test test </p>
+        </div>
+        <div class="columns two"></div>
+        <div class="columns three"></div>
+    </div>
     <div class="columns one"></div>
     <div class="columns two"></div>
     <div class="columns three"></div>
