updated with one-half and one-third sized column classes

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 
 <div class="container_Auto">
     <div class="row">
+        <div class="columns one-third"></div>
+        <div class="columns one-third"></div>
+        <div class="columns one-third"></div>
+    </div>
+    <div class="row">
+        <div class="columns one-half"></div>
+        <div class="columns one-half"></div>
+    </div>
+    <div class="row">
+        <div class="columns sixteen"></div>
+    </div>
+    <div class="row">
         <div class="columns one"></div>
         <div class="columns two"></div>
         <div class="columns three"></div>
@@ -24,7 +36,10 @@
         <div class="columns two"></div>
         <div class="columns three"></div>
     </div>
-    <div class="columns one"></div>
+    <div class="row">
+        <div class="columns one offset-by-three"></div>
+        <div class="columns one"></div>
+    </div>
     <div class="columns two"></div>
     <div class="columns three"></div>
     <div class="columns four"></div>
@@ -41,6 +56,5 @@
     <div class="columns fifteen"></div>
     <div class="columns sixteen"></div>
 </div>
-
 </body>
 </html>
